syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
    rpc createBillingAccount (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
}

message BillingResponse {
    string accountId = 1;
    string status = 2;
    string message = 3;
}
